# Ignosi-Memory

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  azure-pipelines.yml  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  main.cpp
cmake/: arm64-osx-gcc.cmake  arm64-osx-gcc.toolchain.cmake  arm64-osx-llvm.cmake  arm64-osx-llvm.toolchain.cmake  x64-linux-gcc.cmake  x64-linux-gcc.toolchain.cmake  x64-linux-llvm.cmake  x64-linux-llvm.toolchain.cmake
lib/: CMakeLists.txt  dll_allocate.h  dll_allocator.hpp  dll_object_pool.cpp  dll_object_pool.h  dll_object_pool.hpp  dll_unique_ptr.hpp  string_lib.cpp  string_lib.h
lib/allocate/: CMakeLists.txt  Config.cmake.in  dll_allocate.cpp  dll_allocate.h  dll_object_pool.cpp  dll_object_pool.h
lib/allocate-cpp/: CMakeLists.txt  dll_allocator.hpp  dll_object_pool.hpp  dll_pointer.hpp  dll_unique_ptr.hpp
lib/allocate/detail/: dll_object_pool_data.cpp  dll_object_pool_data.h
lib/allocator/: CMakeLists.txt  ObjectPool.hpp  PoolPointer.hpp  dll_object_pool.cpp  dll_object_pool.h  dll_object_pool.hpp  pool_allocator.h  pool_bucket.h
lib/allocator/detail/: boost_pool_allocator.h  dll_object_pool_wrapper.h
lib/containers/: CMakeLists.txt  dll_array.h
lib/detail/: dll_object_pool_data.cpp  dll_object_pool_data.h
lib/dll/: CMakeLists.txt  dll_allocate.cpp  dll_allocate.h  dll_allocator.hpp  dll_defines.h  dll_pointer.hpp
test/: CMakeLists.txt  dll_allocate_tests.cpp  dll_object_pool_tests.cpp  memory_leak_detector.cpp  memory_leak_detector.h  string_lib_test.cpp
